RESOLVED FIXED253013
[contain-intrinsic-size] failures related to replaced elements
https://bugs.webkit.org/show_bug.cgi?id=253013
Summary [contain-intrinsic-size] failures related to replaced elements
cathiechen
Reported 2023-02-27 11:35:19 PST
There are several issues need to fix. * There are some special returns for inline size containment. We should avoid it and let intrinsicSize() to handle both size and inline size containment instead. * For video, when calculateIntrinsicSize(), it should consider contain:inline-size. * intrinsicSize() should consider the inline size containment scenario.
Attachments
WIP-patch (13.74 KB, patch)
2023-02-27 11:37 PST, cathiechen
no flags
cathiechen
Comment 1 2023-02-27 11:37:30 PST
Created attachment 465202 [details] WIP-patch
cathiechen
Comment 2 2023-03-01 11:07:07 PST
Radar WebKit Bug Importer
Comment 3 2023-03-01 12:23:25 PST
EWS
Comment 4 2023-03-03 19:51:02 PST
Committed 261205@main (43b73e296e50): <https://commits.webkit.org/261205@main> Reviewed commits have been landed. Closing PR #10881 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.